--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "dotenv": "^8.0.0",
     "sirv-cli": "^0.4.4"
   },
   "scripts": {
@@ -21,7 +23,7 @@
     "dev": "run-p start:dev autobuild",
     "start": "sirv public --single",
     "start:dev": "sirv public --single --dev",
-    "start:lambda": "netlify-lambda serve netlify/functions",
-    "build:lambda": "netlify-lambda build netlify/functions"
+    "lambda:serve": "netlify-lambda serve functions",
+    "lamda:serve": "netlify-lambda build functions"
   }
 }
