--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "axios": "^0.19.0",
     "dotenv": "^8.0.0",
+    "node-fetch": "^2.6.0",
     "sirv-cli": "^0.4.4"
   },
   "scripts": {
