--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "dotenv": "^8.0.0",
+    "mkdirp": "^0.5.1",
     "node-fetch": "^2.6.0",
+    "rimraf": "^3.0.0",
     "sirv-cli": "^0.4.4"
   },
   "scripts": {
@@ -24,6 +26,7 @@
     "start": "sirv public --single",
     "start:dev": "sirv public --single --dev",
     "lambda:serve": "netlify-lambda serve functions",
-    "lamda:build": "netlify-lambda build functions"
+    "lamda:build": "netlify-lambda build functions",
+    "data:stations": "./scripts/stations-to-json.js"
   }
 }
