--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "dotenv": "^8.0.0",
+    "encoding": "^0.1.12",
     "mkdirp": "^0.5.1",
     "node-fetch": "^2.6.0",
     "rimraf": "^3.0.0",
